[gd_scene load_steps=3 format=3 uid="uid://bl5c8l0iod6t0"]

[ext_resource type="Script" uid="uid://qhn6sebdcux6" path="res://scripts/ui/onboarding_popup.gd" id="1_1m1cu"]
[ext_resource type="Texture2D" uid="uid://bh038x7sdmnum" path="res://assets/ui/onboarding.png" id="1_iyn3k"]

[node name="Onboarding" type="Popup"]
oversampling_override = 1.0
size = Vector2i(2370, 1742)
visible = true
script = ExtResource("1_1m1cu")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1122.5
offset_top = -871.0
offset_right = 1122.5
offset_bottom = 871.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.47788507, 0.47788507)
texture = ExtResource("1_iyn3k")

[node name="Label" type="Label" parent="."]
offset_left = 48.0
offset_top = 102.0
offset_right = 655.0
offset_bottom = 147.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Prem els objectes fins a trencar-los."
horizontal_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="."]
offset_left = 554.0
offset_top = 102.0
offset_right = 1151.0
offset_bottom = 147.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Apareixen les lletres que el formen!"
horizontal_alignment = 1
uppercase = true

[node name="Label3" type="Label" parent="."]
offset_left = -3.0
offset_top = 487.0
offset_right = 727.0
offset_bottom = 532.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Escolta el dictat i crea 
paraules noves arrossegant les peces."
horizontal_alignment = 1
uppercase = true

[node name="Label4" type="Label" parent="."]
offset_left = 481.0
offset_top = 499.0
offset_right = 1207.0
offset_bottom = 544.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Forma els noms dels animals per salvar-los"
horizontal_alignment = 1
uppercase = true

[node name="JugarButton" type="Button" parent="."]
offset_left = 543.0
offset_top = 790.0
offset_right = 661.0
offset_bottom = 838.0
text = "JUGAR"

[connection signal="mouse_entered" from="JugarButton" to="." method="_on_jugar_button_mouse_entered"]
[connection signal="mouse_exited" from="JugarButton" to="." method="_on_jugar_button_mouse_exited"]
[connection signal="pressed" from="JugarButton" to="." method="_on_jugar_button_pressed"]
